Fixed a bug